Bug 146250 - [Character Set] combobox in [HTML Compatibility] is not set to the saved value when reopened.
Summary: [Character Set] combobox in [HTML Compatibility] is not set to the saved valu...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.3.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0 target:7.3.0.0.beta2
Keywords:
Depends on:
Blocks:
 
Reported: 2021-12-15 21:46 UTC by himajin100000
Modified: 2021-12-21 08:27 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description himajin100000 2021-12-15 21:46:40 UTC
Description:
see steps to reproduce

Steps to Reproduce:
1. Start LibreOffice
2. [Tools]->[Options] in Main menu
3. [LibreOfficeDev]->[Load/Save]->[HTML Compatibity]
4. Set [Character Set] to UTF-8
5. Click OK to close the dialog
6. [Tools]->[Options] in Main menu
7. [LibreOfficeDev]->[Load/Save]->[HTML Compatibity]
8. see what's set in [Character Set]


Actual Results:
Shift-JIS

at least under Japanese version of windows

Expected Results:
UTF-8


Reproducible: Always


User Profile Reset: No



Additional Info:
$ git bisect log
# bad: [a209d6cc0892059375d3ee53987a56bc72130ff7] source 7ec1ef958855ba7ebff4d3bc623f454015ec5a5c
# good: [ae1ad37a8ac6da497ad38f3a5d8c55dd6bb01f9c] source ff2ba77f22b2e96f96f5537aec1705956b47583d
git bisect start 'latest' 'oldest'
# bad: [c215c69a02c4c3c74edbd58aec4cfb9e8720cd65] source af686402107a54f141eea3bb7706e3ff665178ae
git bisect bad c215c69a02c4c3c74edbd58aec4cfb9e8720cd65
# good: [244b0e66a575e83fa9fc514d3feed89397832d21] source 98042f96c8d6806c9ce01c13b6b75cebfb8405de
git bisect good 244b0e66a575e83fa9fc514d3feed89397832d21
# bad: [5b05af6ea3af0d78a4bafa4019c5443a2340d546] source d8fec570c21c5e45ba593ee96cc1ba5d45d77fc8
git bisect bad 5b05af6ea3af0d78a4bafa4019c5443a2340d546
# good: [b0755fc5330429bd3972cd53422d5b3611288864] source 8e8d3f4db94e0069a1d84378d295268f5037b016
git bisect good b0755fc5330429bd3972cd53422d5b3611288864
# good: [6701cb8c36ee95d42d5b5e71acd6efee635fa173] source 4e89b710c05cd1774072575330623cb5c6b2650f
git bisect good 6701cb8c36ee95d42d5b5e71acd6efee635fa173
# bad: [c85b43ca9d7d2411a6d86ee83423f1d94b29652f] source 4d85cf64bde5ad7d59deba2d8211404f1ec61fb3
git bisect bad c85b43ca9d7d2411a6d86ee83423f1d94b29652f
# good: [9206cb36554a79b0419303bb8fc63dfc8610630c] source 6e155959de6f46afbe0b68057200c3da822d81f9
git bisect good 9206cb36554a79b0419303bb8fc63dfc8610630c
# bad: [1cbc1dafe90f4f3677332d70caf16fe72616e368] source da9bba7cc3c243e936daea689fea64ecaf110f35
git bisect bad 1cbc1dafe90f4f3677332d70caf16fe72616e368
# good: [c270e8101f523b7db601abac4d23e1c6e0d62645] source 57ee7deddd0934dab58199cb1d0b95439e2ba6b3
git bisect good c270e8101f523b7db601abac4d23e1c6e0d62645
# good: [6acad08011b967d3b4df383427b36a4ceeac9d71] source 3c3b9ad8886da916027f0fb940a2df822d63d4d7
git bisect good 6acad08011b967d3b4df383427b36a4ceeac9d71
# good: [f68376ad88759493e19206f9e1dd9be0adc12697] source 6ed8c5a0f19901ab413c6610649326b2475c3a8c
git bisect good f68376ad88759493e19206f9e1dd9be0adc12697
# good: [5d49e1bc0371ee006139842cc4210f81560910d2] source 6e07c40577df013dc113310b7c2b76ee2b26e158
git bisect good 5d49e1bc0371ee006139842cc4210f81560910d2
# first bad commit: [1cbc1dafe90f4f3677332d70caf16fe72616e368] source da9bba7cc3c243e936daea689fea64ecaf110f35
Comment 1 himajin100000 2021-12-15 21:50:46 UTC
Is pImpl->bIsEncodingDefault in the pre-(bad commit) same as SvxHtmlOptions::IsDefaultTextEncoding() used at https://opengrok.libreoffice.org/xref/core/cui/source/options/opthtml.cxx?r=da9bba7c#170 ?
Comment 2 Noel Grandin 2021-12-16 07:00:37 UTC
you are right, that method is wrong, does this help:

    https://gerrit.libreoffice.org/c/core/+/126902

?
Comment 3 Commit Notification 2021-12-17 06:26:27 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d505940a7fff8674ff4d22eaa04972a56bea516e

tdf#146250 fix SvxHtmlOptions::IsDefaultTextEncoding

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2021-12-17 10:42:58 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/f4ba4c014c74d1735288fe356878d6a2effab21f

tdf#146250 fix SvxHtmlOptions::IsDefaultTextEncoding

It will be available in 7.3.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.