tdf#146250 fix SvxHtmlOptions::IsDefaultTextEncoding

regression from
    commit da9bba7cc3c243e936daea689fea64ecaf110f35
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Mon Jul 26 10:10:17 2021 +0200
    use officecfg for SvxHtmlOptions

spotted by himajin100000

Change-Id: Id237f7c4d6d816539141de97a19add0a993d92ba